fixed responsive issues on small screens

--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -44,6 +44,18 @@ table {
     font-size: 3.7rem;
 }
 
+@media (max-width: 500px) {
+  .board h1 {
+    font-size: 3.2rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .board h1 {
+    font-size: 2.7rem;
+  }
+}
+
 /* neon text styles, imported from codepen of THomas Trinca */
 @font-face {
   font-family: neon;
