--- a/src/components/cell/cell.css
+++ b/src/components/cell/cell.css
@@ -2,7 +2,7 @@
     width: 60px;
     height: 55px;
     background-color: #eee;
-    transition: background-color 0.4s ease;
+    transition: background-color 0.3s ease-out;
     border-radius: 3px;
 }
 
